# sorex

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  proptest.toml  rust-toolchain.toml  wasm-pack.toml
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: RESULTS-EU.md  RESULTS.md  bench-cutlass.ts  bench-js.mjs  bench-js.ts  bench-memory.mjs  bench-memory.ts  bench-sizes.mjs  bench-sizes.ts  bench-unified.ts  bench_searcher.rs  bench_wasm.rs  crawl-cutlass-docs.ts  decode_sections.rs  package-lock.json  package.json  results-eu.json  results-js.json  search_bench.rs  test-loader.ts  tsconfig.json
data/: demo.html  stop_words.json
data/build-fixtures/filtered/: adv-0.json  eng-0.json  eng-1.json  manifest.json
data/build-fixtures/invalid-doc/: 0.json  manifest.json
data/build-fixtures/invalid-manifest/: manifest.json
data/build-fixtures/missing-doc/: 0.json  manifest.json
data/build-fixtures/valid/: 0.json  1.json  2.json  manifest.json
data/e2e/fixtures/: sorex-loader.js
data/e2e/output/: demo.html
data/proptest-regressions/: hybrid.txt  lib.txt
datasets/: austria.json  belgium.json  bulgaria.json  croatia.json  cyprus.json  czech-republic.json  denmark.json  estonia.json  finland.json  france.json  germany.json  greece.json  hungary.json  iceland.json  ireland.json  italy.json  latvia.json  lithuania.json  luxembourg.json  malta.json  manifest.json  netherlands.json  poland.json  portugal.json  romania.json  slovakia.json  slovenia.json  spain.json  sweden.json  switzerland.json  ukraine.json
datasets/output/: index-868342ec.sieve  manifest.json  sieve-loader.js  sieve.d.ts  sieve.js  sieve_bg.wasm  sieve_bg.wasm.d.ts
debian/: postinst
docs/: algorithms.md  architecture.md  benchmarks.md  binary-format.md  cli.md  contributing.md  index.md  integration.md  landing.md  quickstart.md  runtime.md  rust.md  troubleshooting.md  typescript.md  verification.md
docs/comparisons/: cutlass.md  pytorch.md
e2e/: test-search.ts
e2e/fixtures/: 0.json  1.json  2.json
e2e/output/: demo.html  index-868342ec.sieve  sieve-loader.js
examples/: generate-eu-data.sh
fixtures/: test_docs.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: binary_parsing.rs  bucketed_ranking.rs  heading_id_validation.rs  levenshtein_matching.rs  score_calculation.rs  search_queries.rs  section_boundaries.rs  section_table_codec.rs  tier_merging.rs  varint_codec.rs  vocabulary_codec.rs
kani-proofs/: Cargo.toml  README.md
kani-proofs/mutants.out/: lock.json
kani-proofs/src/: lib.rs
lean/: Main.lean  SearchVerified.lean  lake-manifest.json  lakefile.lean
lean/.lake/: lakefile.olean  lakefile.olean.trace
lean/SearchVerified/: Accumulation.lean  Basic.lean  Binary.lean  BinarySearch.lean  InvertedIndex.lean  Levenshtein.lean  Oracle.lean  ProgressiveLoading.lean  Scoring.lean  SearchOptions.lean  Section.lean  Streaming.lean  StreamingSearch.lean  SuffixArray.lean  Suggestions.lean  TieredSearch.lean  Types.lean
macros/: Cargo.toml
macros/src/: lean_spec.rs  lean_verify.rs  lib.rs  proptest.rs  proptest_gen.rs
macros/src/codegen/: mod.rs  types.rs
src/: binary.rs  cli.rs  contracts.rs  dict_table.rs  docs_compression.rs  fst_index.rs  hybrid.rs  index.rs  inverted.rs  levenshtein.rs  levenshtein_dfa.rs  lib.rs  main.rs  sais.rs  scoring.rs  search.rs  testing.rs  types.rs  union.rs  utils.rs  verified.rs  wasm.rs
src/binary/: encoding.rs  header.rs  incremental.rs  mod.rs  postings.rs
src/cli/: display.rs  mod.rs
src/fuzzy/: dfa.rs  levenshtein.rs  mod.rs
src/index/: fst.rs  hybrid.rs  inverted.rs  mod.rs  sais.rs  suffix_array.rs
src/runtime/: deno.rs  mod.rs  wasm.rs
src/scoring/: core.rs  mod.rs  ranking.rs
src/search/: dedup.rs  hybrid.rs  mod.rs  suffix.rs  tiered.rs  union.rs  utils.rs
src/util/: dict_table.rs  docs_compression.rs  mod.rs  normalize.rs  simd.rs
src/verify/: contracts.rs  mod.rs  types.rs
tests/: build.rs  comprehensive.rs  integration.rs  invariants.rs  multilingual.rs  property.proptest-regressions  property.rs  regression.rs  search.rs  test_property_enhanced.proptest-regressions  unit.rs
tests/common/: mod.rs
tests/integration/: binary_validation.rs  custom_ranking.rs  datasets.rs  index_loading.rs  wasm.rs
tests/property/: accumulation.rs  binary_props.rs  binary_search.rs  custom_scoring.rs  fuzzy_dfa.rs  invariants.rs  inverted_index_props.rs  multilingual.rs  oracle_differential.rs  oracles.rs  postings_encoding.proptest-regressions  postings_encoding.rs  properties.rs  scoring_props.rs  search_results.proptest-regressions  search_results.rs  section_props.rs  suffix_array_props.rs  suffix_search.rs  tier_integration.proptest-regressions  tier_integration.rs  tiered_search.proptest-regressions  tiered_search.rs
tests/regression/: expanded_ranges.rs
tests/search/: correctness.rs  deduplication.rs  determinism.rs  edge_cases.rs  matched_term.rs  query_refinement.rs  ranking.rs  tier_exclusion.rs  tiered.rs
tests/unit/: compression.rs  dfa.rs  suffix_array.rs
tools/: bench.ts  build.ts  crawl.ts  demo.ts  deno.json  e2e.spec.ts  e2e.ts  loader.ts  playwright.config.ts  playwright.ts  regression.ts  score.ts  serve.ts  test.ts
xtask/: Cargo.toml
xtask/src/: main.rs
