[package]
name = "sieve-lean-macros"
version = "0.2.4"
edition = "2021"
description = "Procedural macros for generating Lean 4 specifications from Rust sieve code"
repository = "https://github.com/harryzorus/sieve"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
# For testing macro output
trybuild = "1.0"
