[package]
name = "sorex-lean-macros"
version = "0.2.5"
edition = "2021"
description = "Procedural macros for generating Lean 4 specifications from Rust sorex code"
repository = "https://github.com/harryzorus/sorex"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
# For testing macro output
trybuild = "1.0"
