[package]
name = "sorex-lean-macros"
version = "1.0.0"
edition = "2021"
description = "Procedural macros for generating Lean 4 specifications from Rust sorex code"
repository = "https://github.com/harryzorus/sorex"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
# For testing macro output
trybuild = "1.0"
